--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-intl": "^5.20.12",
     "react-scripts": "4.0.3",
+    "sass": "^1.43.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
